syntax = "proto3";

package multiple_reactions;

message ReactionAndSidechains {
  oneof file_name {
    string proto_reaction_file = 1;
    string legacy_reaction_file = 2;
  }

  // One or more files containing the sidechains for each sidechain in the reaction.
  repeated string sidechain_file = 3;
}

message Options {
  repeated ReactionAndSidechains rxn = 1;

  // By default each reaction is applied to a copy of the starting molecule.
  // If this is set, all reactions are applied, sequentially, to the same molecule.
  optional bool apply_all_reactions_to_reagent = 2;

  // If we are applying each reaction to a copy of the starting molecule and if
  // any of our reactions results in removing atoms, then the substructure perception
  // must be re-done after every change - we cannot do an initial substructure
  // search, getting multiple matches, and expect the subsequent matches to be still
  // ok after the first match is used. 

  optional bool reaction_contains_atom_removals = 3;
}
